Add RMI option for without-docker page (#3616)
"--add-opens java.rmi/javax.rmi.ssl=ALL-UNNAMED" added to "Execute the jar"-command (needed for kafka-ui version 0.6.0 and later)